<resources>
    <string name="app_name">My News</string>
    <string name="searchMenu">Search</string>
    <string name="notifications">Notifications</string>
    <string name="helpMenu">Help</string>
    <string name="aboutMenu">About</string>
    <string name="searchToolbarTitle">Search Articles</string>
    <string name="notificationToolBarTitle">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topstories">Top Stories</string>
    <string name="mostpopular">Most Popular</string>
    <string name="automobiles">Automobiles</string>
    <string name="search_query_term_hint">Search query term</string>
    <string name="begin_date_hint">Begin date</string>
    <string name="end_date_hint">End date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sport">Sport</string>
    <string name="travel">Travel</string>
    <string name="enable_notification">Enable notification (once per day)</string>
    <string name="search">SEARCH</string>
    <string name="query_term_empty">Query term can\'t be empty</string>
    <string name="checkbox_selected">One checbox must be selected</string>
    <string name="result_search_toolbar_title">Search\'s results</string>
    <string name="have_a_good_news">We have a good news for you</string>
    <string name="no_result_search">There is no news matched your search. Please, modify your search and try again</string>
    <string name="webviewToolbarTitle">Article</string>
</resources>
